--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,6 @@
 /Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/obj
 /Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/bin
 /Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.csproj.user
+/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj.DotSettings
+/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj.user
+Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj.user
