--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F8855F9A-35D1-4C30-BB53-1FD89A984989}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zirpl.AppEngine.CodeGeneration</RootNamespace>
-    <AssemblyName>Zirpl.AppEngine.CodeGeneration</AssemblyName>
+    <RootNamespace>Zirpl.AppEngine.VisualStudioAutomation</RootNamespace>
+    <AssemblyName>Zirpl.AppEngine.VisualStudioAutomation</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -78,36 +78,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppGenerator.cs" />
-    <Compile Include="TextTemplating\ITextTransformation.cs" />
-    <Compile Include="TextTemplating\ParamTextTemplate.cs" />
-    <Compile Include="TextTemplating\PreprocessedTextTransformationWrapper.cs" />
-    <Compile Include="TextTemplating\TextTransformationSession.cs" />
-    <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
-    <Compile Include="TextTemplating\OutputFileProperties.cs" />
-    <Compile Include="TextTemplating\TextBlock.cs" />
-    <Compile Include="VisualStudio\BuildActionTypeEnum.cs" />
-    <Compile Include="TextTemplating\OutputFile.cs" />
-    <Compile Include="TextTemplating\OutputFileManager.cs" />
-    <Compile Include="VisualStudio\VisualStudio.cs" />
-    <Compile Include="VisualStudio\DTEExtensions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextTemplating\LogHelper.cs" />
+    <Compile Include="AppGeneration\AppGenerator.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="AppGeneration\ConfigModel\App.cs" />
     <Compile Include="AppGeneration\ConfigModel\DomainPropertyInfo.cs" />
     <Compile Include="AppGeneration\ConfigModel\DomainTypeInfo.cs" />
     <Compile Include="AppGeneration\ConfigModel\EnumValueInfo.cs" />
-    <Compile Include="AppGeneration\ConfigModel\FileGeneration\ClassFileToGenerate.cs" />
-    <Compile Include="TextTemplating\FileToGenerate.cs" />
-    <Compile Include="AppGeneration\ConfigModel\FileGeneration\FilesToGenerateFactory.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\ConfigFileException.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\PropertyJson.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\EnumValueJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\FileGeneration\ClassOutputFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="AppGeneration\ConfigModel\FileGeneration\OutputFileFactory.cs" />
     <Compile Include="AppGeneration\ConfigModel\Parsers\AppFileParser.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\ConfigFileException.cs" />
     <Compile Include="AppGeneration\ConfigModel\Parsers\DomainFileParser.cs" />
     <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\AppJson.cs" />
     <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\DomainTypeJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\EnumValueJson.cs" />
     <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\IdJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\PropertyJson.cs" />
     <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\RelationshipJson.cs" />
     <Compile Include="AppGeneration\ConfigModel\RelationshipInfo.cs" />
     <Compile Include="AppGeneration\Templates\Model\PersistableDomainClassTemplate.cs">
@@ -116,6 +105,18 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="TextTemplating\ITransformation.cs" />
+    <Compile Include="TextTemplating\OutputFileManager.cs" />
+    <Compile Include="TextTemplating\PreprocessedTransformWrapper.cs" />
+    <Compile Include="TextTemplating\TransformOutputFile.cs" />
+    <Compile Include="TextTemplating\TransformSession.cs" />
+    <Compile Include="TextTemplating\TransformWrapper.cs" />
+    <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
+    <Compile Include="VisualStudio.cs" />
+    <Compile Include="VisualStudioExtensions.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextTemplating\LogHelper.cs" />
+    <Compile Include="TextTemplating\OutputFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -131,14 +132,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="AppGeneration\ConfigModel\Parsers\JsonModel\sample domain.zae" />
     <None Include="AppGeneration\Templates\Model\PersistableDomainClassTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>PersistableDomainClassTemplate.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="AppGeneration\ConfigModel\Parsers\JsonModel\sample domain.zae" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
