--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -76,46 +76,47 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppGeneration\AppGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AppGeneration\ConfigModel\App.cs" />
-    <Compile Include="AppGeneration\ConfigModel\DomainPropertyInfo.cs" />
-    <Compile Include="AppGeneration\ConfigModel\DomainTypeInfo.cs" />
-    <Compile Include="AppGeneration\ConfigModel\EnumValueInfo.cs" />
-    <Compile Include="AppGeneration\ConfigModel\FileGeneration\ClassOutputFile.cs">
+    <Compile Include="AppGeneration\Config\App.cs" />
+    <Compile Include="AppGeneration\Config\DomainProperty.cs" />
+    <Compile Include="AppGeneration\Config\DomainType.cs" />
+    <Compile Include="AppGeneration\Config\EnumValue.cs" />
+    <Compile Include="AppGeneration\ClassToGenerate.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AppGeneration\ConfigModel\FileGeneration\OutputFileFactory.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\AppFileParser.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\ConfigFileException.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\DomainFileParser.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\AppJson.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\DomainTypeJson.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\EnumValueJson.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\IdJson.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\PropertyJson.cs" />
-    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\RelationshipJson.cs" />
-    <Compile Include="AppGeneration\ConfigModel\RelationshipInfo.cs" />
+    <Compile Include="AppGeneration\Config\AppGenerationSettings.cs" />
+    <Compile Include="AppGeneration\OutputFileFactory.cs" />
+    <Compile Include="AppGeneration\Config\Parsers\ConfigFileException.cs" />
+    <Compile Include="AppGeneration\Config\Parsers\DomainFileParser.cs" />
+    <Compile Include="AppGeneration\Config\Parsers\JsonModel\AppJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsers\JsonModel\DomainTypeJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsers\JsonModel\EnumValueJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsers\JsonModel\IdJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsers\JsonModel\PropertyJson.cs" />
+    <Compile Include="AppGeneration\Config\Parsers\JsonModel\RelationshipJson.cs" />
+    <Compile Include="AppGeneration\Config\Relationship.cs" />
     <Compile Include="AppGeneration\Templates\Model\PersistableDomainClassTemplate.cs">
       <DependentUpon>PersistableDomainClassTemplate.tt</DependentUpon>
       <SubType>Code</SubType>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="AppGeneration\ITemplateOutputFileBuilderStrategy.cs" />
     <Compile Include="TextTemplating\ITransformation.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
     <Compile Include="TextTemplating\PreprocessedTransformWrapper.cs" />
-    <Compile Include="TextTemplating\TransformOutputFile.cs" />
+    <Compile Include="TextTemplating\TemplateOutputFile.cs" />
     <Compile Include="TextTemplating\TransformSession.cs" />
     <Compile Include="TextTemplating\TransformWrapper.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
     <Compile Include="VisualStudio.cs" />
     <Compile Include="VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextTemplating\LogHelper.cs" />
     <Compile Include="TextTemplating\OutputFile.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,7 +133,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="AppGeneration\ConfigModel\Parsers\JsonModel\sample domain.zae" />
+    <None Include="AppGeneration\Config\Parsers\JsonModel\sample domain.zae" />
     <None Include="AppGeneration\Templates\Model\PersistableDomainClassTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>PersistableDomainClassTemplate.cs</LastGenOutput>
