--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
@@ -41,11 +41,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_auto\AddressBase.auto.cs" />
-    <Compile Include="_auto\AddressBaseExtendedFieldValue.auto.cs" />
-    <Compile Include="_auto\DomesticAddress.auto.cs" />
-    <Compile Include="_auto\InternationalAddress.auto.cs" />
-    <Compile Include="_auto\NamePrefixType.auto.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
@@ -53,6 +48,7 @@
       <Name>Zirpl.AppEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
