--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -116,11 +116,10 @@
     <Compile Include="TextTemplating\ITextTransformation.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
     <Compile Include="TextTemplating\PreprocessedTextTransformationWrapper.cs" />
-    <Compile Include="TextTemplating\TemplateOutputFile.cs" />
-    <Compile Include="TextTemplating\TransformationContext.cs" />
+    <Compile Include="TextTemplating\PreprocessedTextTransformationOutputFile.cs" />
+    <Compile Include="TextTemplating\TextTransformationContext.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
-    <Compile Include="VisualStudio.cs" />
     <Compile Include="VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\OutputFile.cs" />
