--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -87,6 +87,8 @@
     <Compile Include="AppGeneration\Config\DomainType.cs" />
     <Compile Include="AppGeneration\Config\EnumValue.cs" />
     <Compile Include="AppGeneration\Config\AppExtensions.cs" />
+    <Compile Include="AppGeneration\TextTemplating\AccessibilityModifierTypeEnum.cs" />
+    <Compile Include="AppGeneration\TextTemplating\ClassWriter.cs" />
     <Compile Include="AppGeneration\TextTemplating\IOutputClassBuilder.cs" />
     <Compile Include="AppGeneration\TextTemplating\OutputClass.cs">
       <SubType>Code</SubType>
@@ -94,7 +96,6 @@
     <Compile Include="AppGeneration\Config\AppGenerationSettings.cs" />
     <Compile Include="AppGeneration\TextTemplating\DefaultOutputFileBuilderFactory.cs" />
     <Compile Include="AppGeneration\TextTemplating\IOutputFileBuilderFactory.cs" />
-    <Compile Include="AppGeneration\TextTemplating\V1\Templates\Model\PersistableDomainClassBuilder.cs" />
     <Compile Include="AppGeneration\Config\Parsers\ConfigFileException.cs" />
     <Compile Include="AppGeneration\Config\Parsers\DomainFileParser.cs" />
     <Compile Include="AppGeneration\Config\Parsers\Json\AppJson.cs" />
@@ -104,13 +105,6 @@
     <Compile Include="AppGeneration\Config\Parsers\Json\PropertyJson.cs" />
     <Compile Include="AppGeneration\Config\Parsers\Json\RelationshipJson.cs" />
     <Compile Include="AppGeneration\Config\Relationship.cs" />
-    <Compile Include="AppGeneration\TextTemplating\V1\BuilderKeys.cs" />
-    <Compile Include="AppGeneration\TextTemplating\V1\Templates\Model\PersistableDomainClassTemplate.cs">
-      <DependentUpon>PersistableDomainClassTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
     <Compile Include="AppGeneration\TextTemplating\IOutputFileBuilder.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
@@ -138,10 +132,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="AppGeneration\Config\Parsers\Json\sample domain.zae" />
-    <None Include="AppGeneration\TextTemplating\V1\Templates\Model\PersistableDomainClassTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>PersistableDomainClassTemplate.cs</LastGenOutput>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
