--- a/Zirpl.AppEngine.Net45/Zirpl.AppEngine.Net45.csproj
+++ b/Zirpl.AppEngine.Net45/Zirpl.AppEngine.Net45.csproj
@@ -198,9 +198,6 @@
     <Compile Include="..\Zirpl.AppEngine\Model\Extensibility\CustomFieldDefinitionTypeEnum.cs">
       <Link>Model\Extensibility\CustomFieldDefinitionTypeEnum.cs</Link>
     </Compile>
-    <Compile Include="..\Zirpl.AppEngine\Model\Extensibility\ExtendedEntityFieldValueBase.cs">
-      <Link>Model\Extensibility\ExtendedEntityFieldValueBase.cs</Link>
-    </Compile>
     <Compile Include="..\Zirpl.AppEngine\Model\Extensibility\ICustomFieldDefinition.cs">
       <Link>Model\Extensibility\ICustomFieldDefinition.cs</Link>
     </Compile>
@@ -490,7 +487,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
+      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
