--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
@@ -41,16 +41,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_auto\AddressBase.cs" />
-    <Compile Include="_auto\AddressBaseExtendedFieldValue.cs" />
-    <Compile Include="_auto\DomesticAddress.cs" />
-    <Compile Include="_auto\InternationalAddress.cs" />
-    <Compile Include="_auto\NamePrefixType.cs" />
+    <Compile Include="_auto\AddressBase.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="_auto\AddressBaseExtendedFieldValue.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="_auto\DomesticAddress.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="_auto\InternationalAddress.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="_auto\NamePrefixType.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
       <Project>{dd9bcb12-748c-4395-9a8e-a599a60a0caa}</Project>
       <Name>Zirpl.AppEngine</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Zirpl.Common\Zirpl.Common.csproj">
+      <Project>{0402a91f-2a69-447c-bb2b-64d5af155105}</Project>
+      <Name>Zirpl.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
