--- a/Zirpl.AppEngine.EntityFramework.Net45/Zirpl.AppEngine.EntityFramework.Net45.csproj
+++ b/Zirpl.AppEngine.EntityFramework.Net45/Zirpl.AppEngine.EntityFramework.Net45.csproj
@@ -75,9 +75,6 @@
     <Compile Include="..\Zirpl.AppEngine.EntityFramework\DataService\EntityFramework\ISearchCriteriaTranslator.cs">
       <Link>DataService\EntityFramework\ISearchCriteriaTranslator.cs</Link>
     </Compile>
-    <Compile Include="..\Zirpl.AppEngine.EntityFramework\DataService\EntityFramework\Mapping\DictionaryEntityMapping.cs">
-      <Link>DataService\EntityFramework\Mapping\DictionaryEntityMapping.cs</Link>
-    </Compile>
     <Compile Include="..\Zirpl.AppEngine.EntityFramework\DataService\EntityFramework\Mapping\EntityMappingBase.cs">
       <Link>DataService\EntityFramework\Mapping\EntityMappingBase.cs</Link>
     </Compile>
@@ -143,9 +140,6 @@
     </Compile>
     <Compile Include="..\Zirpl.AppEngine.EntityFramework\Service\EntityFramework\DbContextUnitOfWorkFactory.cs">
       <Link>Service\EntityFramework\DbContextUnitOfWorkFactory.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.EntityFramework\Service\EntityFramework\DictionaryEntityService.cs">
-      <Link>Service\EntityFramework\DictionaryEntityService.cs</Link>
     </Compile>
     <Compile Include="..\Zirpl.AppEngine.EntityFramework\Service\EntityFramework\ReadOnlyDbContextServiceBase.cs">
       <Link>Service\EntityFramework\ReadOnlyDbContextServiceBase.cs</Link>
@@ -247,7 +241,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="b23590ec-7c8d-4bd4-bfee-77c0f0d821a7" />
+      <UserProperties ProjectLinkReference="b23590ec-7c8d-4bd4-bfee-77c0f0d821a7" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
