overridden and additional templates now have very simple APIs to call. No helper classes needed

--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -99,6 +99,7 @@
     <Compile Include="AppGeneration\Config\Relationship.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
+    <Compile Include="TextTemplating\TextTransformationExtensions.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
     <Compile Include="TextTemplating\TextTransformationContext.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
